@@ -1,22 +1,25 @@
 package np.playground.core.util;
 
+import javafx.embed.swing.SwingFXUtils;
+import javafx.scene.image.Image;
 import org.osgi.framework.Filter;
 import org.osgi.framework.FrameworkUtil;
 import org.osgi.framework.ServiceEvent;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
 import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.util.Base64;
 import java.util.Objects;
 
 public class PlaygroundUtil {
     static Logger logger = LoggerFactory.getLogger(PlaygroundUtil.class);
+
+    public static String DEFAULT_CONSOLE_ICON = "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAACf0lEQVQ4T2NkwAEyI6yXigmxSoOkX737/XT6iqPR2JQyIgsmBllWfv7598ibr78uh1kLnw+y41cAya859On+mqNvjMS4WPW4OVis56873g7TBzcgNcyqI8FLOPPthz+/bj75+dFOj0fx4aufr0EK5cXYRQ9d+nJfQ5adX4ifhW3+1ncz56w+WgaSAxsAsjnFT6SCm52Jj5uD6de0jW9Of3vPNNeQhf8ySP78n4+6XIL/krP8RUy//vjH9u3nv09rD3zK6V1wcDHYgDAvU7tYd5G1GnIcfC2LXyz4xiyT1SEoKM3OyAgOg5///z+teP/+KdffJ9NqYiUSVGTYnjP8/qfJaLX6O9gABwcDAW8ToTPP3vx+8eSrhH0fP78tMwNDwj9GRnAYMP3//+AvA8OCoo8fD8twvzioIcshvPzwa8sDBy58YASFtq4yh5WxOrfcvLUfU8rE1fdy/vvXFHXjwgKGfwwO4MBiYjiwTMMg4TsTU133ixsuiSECs8/e/Pro8t0fxxjrsxwOWGhz2X/+/vflu+PsPj4ikqwM//61x1w9f+DAsTMNYBdamTQs0TZ0YGBiqtzy5vlvIcufW3g5mcVPXP12kHIDQF7QVua0NFXnkifFC6dvfnt49e734/BAjLQVPX7j8Y+3xASilAirxNYz70zAgQjy4/9joZwMrEw37jz5JUFMNF5/+OPTot1vg9ZsPXUYbEBxgn1ssAPfFC6khPT9HeM8A1aBSyD5C78/6HEK/U+CJaSvP/99mrPpTQcoScOTckqodVeCp2DGu09/f+JKyuoy7PzCAixsC7a9nT571bEKeFKGZQxCmUmEm02Xl53ZBmtmQs+qxGZnADK/fDSODV+FAAAAAElFTkSuQmCC";
 
     public static Filter createObjectClassFilter(String s) {
         try {
@@ -30,7 +33,7 @@ public class PlaygroundUtil {
     public static String getObjectClass(final ServiceEvent serviceEvent) {
         final Object property = serviceEvent.getServiceReference().getProperty("objectClass");
         if (property == null) {
-            throw new RuntimeException("null cannot be cast to non-null type kotlin.Array<kotlin.String>");
+            throw new RuntimeException("null cannot be cast to non-null type");
         }
         return ((String[]) property)[0];
     }
@@ -49,10 +52,8 @@ public class PlaygroundUtil {
 
         BufferedImage image = null;
         byte[] imageByte;
-
         try {
-            BASE64Decoder decoder = new BASE64Decoder();
-            imageByte = decoder.decodeBuffer(imageString);
+            imageByte = Base64.getDecoder().decode(imageString);
             ByteArrayInputStream bis = new ByteArrayInputStream(imageByte);
             image = ImageIO.read(bis);
             bis.close();
@@ -72,12 +73,17 @@ public class PlaygroundUtil {
         try {
             ImageIO.write(image, type, bos);
             byte[] imageBytes = bos.toByteArray();
-            BASE64Encoder encoder = new BASE64Encoder();
-            imageString = encoder.encode(imageBytes);
+            imageString = Base64.getEncoder().encodeToString(imageBytes);
             bos.close();
         } catch (IOException e) {
             //e.printStackTrace();
         }
         return imageString;
+    }
+
+    public static Image toFXImage(String base64Str) {
+        assert base64Str != null;
+        return SwingFXUtils.toFXImage(decodeBase64ToImage(base64Str), null);
+
     }
 }
